Search, navbar layout, tending template

--- a/crowdFunding.Web/Views/Home/Index.cshtml
+++ b/crowdFunding.Web/Views/Home/Index.cshtml
@@ -2,7 +2,47 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center mainDiv">
+    <img src="~/images/outsideofthebox.jpg" alt="company logo">
 </div>
+
+
+
+<h2 class="trendingH">Trending Projects</h2>
+<div class="trending">
+
+    <a class="clickable" id="btnLeft"><i class="fas fa-angle-left"></i></a>
+
+    <div class="mainViewer">
+        <div class="content" id="content">
+
+            <div class="card">
+                1
+            </div>
+
+            <div class="card">
+                2
+            </div>
+
+            <div class="card">
+                3
+            </div>
+
+            <div class="card">
+                4
+            </div>
+
+            <div class="card">
+                5
+            </div>
+
+        </div>
+    </div>
+
+    <a class="clickable" id="btnRight"><i class="fas fa-angle-right"></i></a>
+</div>
+
+
+
+
+
