--- a/crowdFunding.Web/Views/Home/Index.cshtml
+++ b/crowdFunding.Web/Views/Home/Index.cshtml
@@ -1,6 +1,20 @@
-﻿@{
+﻿@using crowdFunding.Core.Model
+@model List<Project>
+
+@{
     ViewData["Title"] = "Home Page";
 }
+
+@if (Model == null)
+    {
+        <div class="alert alert-warning" role="alert">
+            Project not found
+        </div>
+
+
+
+        return;
+    }
 
 <div class="text-center mainDiv">
     <img src="~/images/outsideofthebox.jpg" alt="company logo">
@@ -15,27 +29,20 @@
 
     <div class="mainViewer">
         <div class="content" id="content">
-
-            <div class="card">
-                1
-            </div>
-
-            <div class="card">
-                2
-            </div>
-
-            <div class="card">
-                3
-            </div>
-
-            <div class="card">
-                4
-            </div>
-
-            <div class="card">
-                5
-            </div>
-
+            @foreach (var p in Model)
+            {
+                @*<div class="card">
+                    @p.Name
+                </div>*@
+                <div class="card">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">@p.Name</h5>
+                        <p class="card-text">@p.Description</p>
+                        <a href="#" class="btn btn-primary">Check it out</a>
+                    </div>
+                </div>
+            }
         </div>
     </div>
 
