updated html errors

--- a/crowdFunding.Web/Views/User/Edit.cshtml
+++ b/crowdFunding.Web/Views/User/Edit.cshtml
@@ -24,12 +24,12 @@
     <div class="form-group">
         <label for="First Name">First Name</label>
         <input class="js-useredit-firstname form-control" id="FirstName" value="@Model.FirstName" placeholder="Change your first name.">
-        <small id="edit-fn" class="form-text text-muted">Confirm your new e-mail address.</small>
+        <small id="edit-fn" class="form-text text-muted">Confirm your first name.</small>
     </div>
     <div class="form-group">
         <label for="Last Name">Last Name</label>
         <input class="js-useredit-lastname form-control" id="LastName" value="@Model.LastName" placeholder="Change your last name.">
-        <small id="edit-ln" class="form-text text-muted">Confirm your new e-mail address.</small>
+        <small id="edit-ln" class="form-text text-muted">Confirm your last name.</small>
     </div>
     <div class="form-group">
         <label for="Email">Email Address</label>
