--- a/crowdFunding.Web/Views/User/Register.cshtml
+++ b/crowdFunding.Web/Views/User/Register.cshtml
@@ -12,17 +12,17 @@
     <div class="form-group">
         <label for="First Name">First Name</label>
         <input class="js-usercreate-firstname form-control" id="FirstName" placeholder="Enter your first name.">
-        <small id="edit-fn" class="form-text text-muted">Enter your new e-mail address.</small>
+        <small id="edit-fn" class="form-text text-muted">Enter your first name.</small>
     </div>
     <div class="form-group">
         <label for="Last Name">Last Name</label>
         <input class="js-usercreate-lastname form-control" id="LastName" placeholder="Enter your last name.">
-        <small id="edit-ln" class="form-text text-muted">Enter your new e-mail address.</small>
+        <small id="edit-ln" class="form-text text-muted">Enter your last name.</small>
     </div>
     <div class="form-group">
         <label for="Email">Email Address</label>
         <input class="js-usercreate-email form-control" id="Email" placeholder="Ex. yourmail@mail.com">
-        <small id="edit-mail" class="form-text text-muted">Enter your new e-mail address.</small>
+        <small id="edit-mail" class="form-text text-muted">Enter your e-mail address.</small>
     </div>
     <div class="form-group">
         <label for="Country">Country</label>
