--- a/crowdFunding.Web/Views/User/Register.cshtml
+++ b/crowdFunding.Web/Views/User/Register.cshtml
@@ -1,8 +1,15 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Register";
 }
-
+@*<div class="modal" tabindex="-1" id="popup-user-create" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>*@
 <form method="post" class="js-user-edit-form">
 
     <h4>
@@ -259,3 +266,10 @@
         User could not be created!
     </div>
 </form>
+@*<div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>*@
