--- a/crowdFunding.Web/Views/User/Register.cshtml
+++ b/crowdFunding.Web/Views/User/Register.cshtml
@@ -250,8 +250,8 @@
     </div>
     <div class="form-group">
         <label for="Description">Description</label>
-        <input class="js-usercreate-description form-control" id="Description" placeholder="Describe yourself.">
-        <small id="edit-dscr" class="form-text text-muted">Enter your user description.</small>
+        <input class="js-usercreate-description form-control" id="Description" placeholder="Describe yourself. (optional)">
+        <small id="edit-dscr" class="form-text text-muted">Enter your user description. (optional)</small>
     </div>
 
     <button type="button" class="js-usercreate-submit-button btn btn-primary">
