--- a/crowdFunding.Web/Views/Project/Details.cshtml
+++ b/crowdFunding.Web/Views/Project/Details.cshtml
@@ -39,6 +39,7 @@
         </div>
         <h5 class="card-title mt-3">@Model.Project.AmountGathered €</h5>
         <p class="card-text mt-3">@Model.Project.NumberOfBackers Backers</p>
+        <p class="card-text mt-3"><i><strong>Due to @Model.Project.DueTo.ToString("d")</strong></i></p>
     </div>
 </div>
 <div class="row mt-3">
@@ -54,7 +55,8 @@
 
             @foreach (var p in Model.Project.Posts)
             {
-                <p class="card-text mt-4">@p.Post</p>
+                <p class="card-text mt-3"><u>@p.CreatedOn.ToString("d")</u></p>
+                <p class="card-text mt-1">@p.Post</p>
             }
         </div>
     </div>
@@ -99,6 +101,9 @@
                                             }
                                         </div>
                                     </div>
+                                </div>
+                                <div class="modal-footer flex-center">
+                                    <br>
                                 </div>
                             </div>
                         </div>
