--- a/crowdFunding.Web/Views/User/Details.cshtml
+++ b/crowdFunding.Web/Views/User/Details.cshtml
@@ -13,8 +13,35 @@
 }
 
 <div class="row">
-    <div class="col-md-6"></div>   
-    <div class="col-md-2">
-        <h5 class="card-title-user">@Model.User.FirstName @Model.User.LastName </h5>
+    <div class="col-4"></div>
+    <div class="profile_bio center mb6">
+        <h2 class="mb3">@Model.User.FirstName @Model.User.LastName</h2>
+        <p class="normal-type mb1">
+            <span class="backed">
+                Backed @Model.User.BackedProjectsList.Count projects
+            </span>
+            <span class="divider">
+                ·
+            </span>
+            <span class="location">
+                @Model.User.Country
+            </span>
+            <span class="divider">
+                ·
+            </span>
+            <span class="joined">
+                Joined on @Model.User.CreatedOn.ToString("d")
+            </span>
+        </p>
+        <nav class="navbar navbar-inverse navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
+            <div class="container-fluid">                
+                <ul class="nav navbar-nav">
+                    <li class="nav-item">About</li>
+                    <li class="nav-item">Backed<span class="count"><sup>@Model.User.BackedProjectsList.Count</sup></span></li>
+                    <li class="nav-item">Created<span class="count"><sup>@Model.User.CreatedProjectsList.Count</sup></span></li>                    
+                </ul>
+            </div>
+        </nav>
     </div>
+    <div class="col-4"></div>
 </div>
