updated connected user pages

--- a/crowdFunding.Web/Views/Project/Details.cshtml
+++ b/crowdFunding.Web/Views/Project/Details.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Details";
 }
 
-@if (Model.Project == null)
+@if (Model == null)
 {<div class="box">
         <div class="content-project">
             <div class="not-found-image">
