--- a/crowdFunding.Web/Views/Project/Details.cshtml
+++ b/crowdFunding.Web/Views/Project/Details.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Details";
 }
 
-@if (Model.Project == null)
+@if (Model == null)
 {<div class="box">
         <div class="content-project">
             <div class="not-found-image">
@@ -30,8 +30,8 @@
     <div class="col-md-4">
         <h5 class="card-title mb-3">@Model.Project.Name </h5>
         <p>
-            by <a href="@Url.Action("Details", "User", new { id = Model.User.UserId })">
-                @Model.User.FirstName @Model.User.LastName
+            by <a href="@Url.Action("Details", "User", new { id = Model.Project.User.UserId })">
+                @Model.Project.User.FirstName @Model.Project.User.LastName
             </a>
         </p>
         <div class="progress mb-3">
@@ -63,7 +63,7 @@
 
     <div class="col-md-4">
         <h5 class="card-header reward-package">Reward Packages</h5>
-        @foreach (var rp in Model.RewardPackages)
+        @foreach (var rp in Model.Project.RewardPackages)
         {
             <div class="card mb-2 shadow p-3 mb-5 bg-white rounded">
                 <h5 class="card-header reward-packages">@rp.Name</h5>
@@ -73,7 +73,7 @@
 
                     <button type="button" class="btn btn-primary mb-3"
                             data-toggle="modal" data-target="#myModal">
-                        Ckeckout Rewards
+                        Checkout Rewards
                     </button>
 
                     <div class="modal fade right" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
