--- a/crowdFunding.Web/Views/Project/Details.cshtml
+++ b/crowdFunding.Web/Views/Project/Details.cshtml
@@ -35,7 +35,11 @@
             </a>
         </p>
         <div class="progress mb-3">
-            <div class="progress-bar progress-bar-striped mb-3" style="width:@Model.Project.Percentage()"></div>
+            <div class="progress-bar progress-bar-striped mb-3" role="progressbar" style="width: 70%"  aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+
+        </div>
+        <div class="progress mb-3">
+            <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <h5 class="card-title mt-3">@Model.Project.AmountGathered €</h5>
         <p class="card-text mt-3">@Model.Project.NumberOfBackers Backers</p>
