--- a/crowdFunding.Web/Views/Project/Details.cshtml
+++ b/crowdFunding.Web/Views/Project/Details.cshtml
@@ -19,7 +19,6 @@
     return;
 }
 
-
 <div class="row mb-3">
     <div class="col-md-6">
         <div class="iframe-container">
@@ -34,8 +33,8 @@
                 @Model.Project.User.FirstName @Model.Project.User.LastName
             </a>
         </p>    
-        <div class="progress mb-3">
-            <div class="progress-bar bg-success progress-bar-striped" role="progressbar" style="width: @Model.Project.Percentage()" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="progress mb-3" style="height:6px;">
+            <div class="progress-bar bg-success" role="progressbar" style="width: @Model.Project.Percentage()" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <h5 class="card-title mt-3">@Model.Project.AmountGathered €</h5>
         <p class="card-text mt-3">@Model.Project.NumberOfBackers Backers</p>
