--- a/crowdFunding.Web/Views/Shared/_Layout.cshtml
+++ b/crowdFunding.Web/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" id="js-footer">
         <div class="container">
             &copy; 2020 - crowdFunding.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
