--- a/crowdFunding.Web/Views/Project/Details.cshtml
+++ b/crowdFunding.Web/Views/Project/Details.cshtml
@@ -3,18 +3,25 @@
     ViewData["Title"] = "Details";
 }
 
-@if (Model == null)
-{<div class="box">
-        <div class="content-project">
-            <div class="not-found-image">
-                <img src="https://www.cdgi.com/wp-content/uploads/2019/05/404-Pages-1112x556.jpg" width="700" height="600" class="img-fluid" alt="Image can not be displayed">
+@if (Model.Project == null)
+{
+    <div class="row text-center">
+        <div class="col-md-3"></div>
+        <div class="box">
+            <div class="content-project">
+                <div class="not-found-image">
+                    <img src="https://www.cdgi.com/wp-content/uploads/2019/05/404-Pages-1112x556.jpg" width="500" height="350" id="not-found-img" class="img-fluid" alt="Image can not be displayed">
+                </div>
+                <div class="not-found-message text-center">
+                    <p>We can't find the page you are looking for, but we have many other projects you can browse</p>
+                    <a class="btn btn-warning" href="@Url.Action("Index", "Home")" role="button">Take me home</a>
+                </div>
             </div>
-            <div class="not-found-message">
-                <p>We can't find the page you are looking for, but we have many other projects you can browse</p>
-                <a class="btn btn-warning" href="#" role="button">Take me home</a>
-            </div>
+            <div class="col-md-3"></div>
         </div>
+        
     </div>
+
 
     return;
 }
@@ -33,7 +40,7 @@
             by <a href="@Url.Action("Details", "User", new { id = Model.Project.User.UserId })">
                 @Model.Project.User.FirstName @Model.Project.User.LastName
             </a>
-        </p>    
+        </p>
         <div class="progress mb-3" style="height:6px;">
             <div class="progress-bar bg-success" role="progressbar" style="width: @Model.Project.Percentage()" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
