--- a/crowdFunding.Web/Views/Project/Search.cshtml
+++ b/crowdFunding.Web/Views/Project/Search.cshtml
@@ -5,29 +5,32 @@
 
 @if (Model.ProjectList.Count == 0)
 {
-    <div class="alert alert-warning" role="alert">
-        Oops! Looks like we couldn’t find any results. Why not change some things around or broaden your search?
-
-        Search project 
+    <div class="row text-center js-error">
+        <div class="col-md-3"></div>
+        <div class="box">
+            <div class="content-project">
+                <div class="not-found-image">
+                    <img src="https://www.cdgi.com/wp-content/uploads/2019/05/404-Pages-1112x556.jpg" width="500" height="350" id="not-found-img" class="img-fluid" alt="Image can not be displayed">
+                </div>
+                <div class="alert alert-warning not-found-message text-center">
+                    Oops! Looks like we couldn’t find any results.<br>
+                    Why not change some things around or broaden your search?
+                </div>
+                <a class="btn btn-warning" href="@Url.Action("Index", "Home")" role="button">Take me home</a>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
     </div>
 
     return;
-}
 
-@if (Model.ProjectList == null)
-{
-    <div class="alert alert-warning" role="alert">
-        Invalid Search Parameters
-    </div>
-
-    return;
 }
 
 <div class="row">
     @foreach (var p in Model.ProjectList)
     {
         <div class="col-md-4">
-            <div class="card mb-2 shadow mb-5 bg-white rounded">
+            <div class="card mt-4 shadow mb-5 bg-white rounded">
                 <!-- Card image -->
                 <img class="card-img-top img-fluid project_photo" src="@p.Photos.ElementAt(0).Url"
                      alt="Image can not be displayed" width="400" height="250">
@@ -46,7 +49,7 @@
                         <li class="list-group-item">@p.AmountGathered €</li>
                         <li class="list-group-item">@p.Percentage() funded</li>
                     </ul>
-                    <a href="@Url.Action("Search", "Project", new { category = p.Category})" class="nav-link text-dark mt-4"><u>@p.Category</u></a>                   
+                    <a href="@Url.Action("Search", "Project", new { category = p.Category})" class="nav-link text-dark mt-4"><u>@p.Category</u></a>
                 </div>
             </div>
         </div>
