--- a/crowdFunding.Web/Views/Shared/_Layout.cshtml
+++ b/crowdFunding.Web/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/lib/fontawesome/css/all.min.css" />
 </head>
 <body style="background-color: #7ccedc">
-    <header>
+    <header id="js-header">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/images/logo.jpg" style="width:110px; height:60px"></a>
